/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/inventory/accounting/pb/gen";

package ukama.inventory.accounting.v1;

service AccountingService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetByCompany(GetByCompanmyRequest) returns (GetByCompanmyResponse);

    rpc SyncAccounting(SyncAcountingRequest) returns (SyncAcountingResponse);
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    Accounting accounting = 1;
}

message GetByCompanmyRequest {
    string company = 1;
}

message GetByCompanmyResponse {
    repeated Accounting accounting = 1;
}

message SyncAcountingRequest {}

message SyncAcountingResponse {}

message Accounting {
    string id = 1;
    string company = 2;
    string item = 3;
    string description = 4;
    string inventory = 5;
    string opexFee = 6 [json_name = "opex_fee"];
    string vat = 7;
    string effectiveDate = 8 [json_name = "effective_date"];
}

